--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300;400;700&display=swap');
+
 
 body {
     background-color:rgb(68, 75, 96);
@@ -57,4 +58,33 @@ button:hover {
     background-color: rgb(230,230,230);
     transform: scale(1.05);
     cursor: pointer;
+}
+
+@media screen and (min-width: 110px) {
+    img {
+        width: 50%;
+        margin: 0 auto;
+        display: block;
+    }
+}
+
+#navbar {
+    background-color: rgb(50, 55, 70);
+    padding: 15px;
+    text-align: center;
+    position: sticky;
+    top: 0;
+}
+
+#navbar a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-family: Roboto, sans-serif;
+    font-weight: 700;
+    transition: color 0.3s ease;
+}
+
+#navbar a:hover {
+    color: rgb(180, 200, 255);
 }
